<resources>
    <string name="app_name">Recycler Test App</string>
    <string name="activity_recycler_test">RecyclerTest</string>
    <string name="activity_juggler_test">JugglerTest</string>
    <string name="recycler_test_type_none_radio_text">None</string>
    <string name="recycler_test_type_single_radio_text">Single</string>
    <string name="recycler_test_type_multi_radio_text">Multi</string>
    <string name="recycler_test_type_switch_btn_text">Switch type</string>
    <string name="recycler_test_current_selected_btn_text">Current selected</string>
    <string name="recycler_test_generate_data_btn_text">Generate</string>
    <string name="recycler_test_clear_data_btn_text">Clear</string>
    <string name="recycler_test_selected_items_message">Selected items is: %s</string>
    <string name="recycler_test_selected_items_empty_message">No selected items</string>
    <string name="recycler_test_adapter_type_changed_message">RecyclerView adapter type changed from %s to %s</string>
    <string name="recycler_test_action_toggle_infinite_scroll_text">Toggle infinite scroll</string>
    <string name="recycler_test_action_toggle_draggable_text">Toggle draggable</string>
    <string name="recycler_test_action_toggle_selectable_text">Toggle selectable</string>
    <string name="recycler_test_action_toggle_selected_text">Toggle selected</string>
    <string name="recycler_test_action_select_all_text">Set all selected</string>
    <string name="recycler_test_action_clear_all_selected_text">Clear all selected</string>
    <string name="recycler_test_action_btn_text">Do this</string>
    <string name="recycler_test_unable_to_toggle_draggable">Unable to toggle draggable: not implemented in ItemController.</string>
    <string name="recycler_test_unable_to_toggle_selectable">Unable to toggle selectable: None type is now selected.</string>
    <string name="recycler_test_unable_to_toggle_selected">Unable to toggle selected: None type is now selected.</string>
    <string name="recycler_test_unable_to_set_all_selection">Unable to set selections to all: Non-multi type is now selected.</string>
    <string name="recycler_test_unable_to_clear_all_selection">Unable to clear selection(s) to all: None type is now selected.</string>
    <string name="tab_one_title">Tab One</string>
    <string name="tab_two_title">Tab Two</string>
    <string name="tab_one_content_text">Tab One Content</string>
    <string name="tab_two_content_text">Tab Two Content</string>
    <string name="main_title">Main</string>
</resources>
