<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recycler_toggle_infinite_scroll"
        android:title="@string/recycler_test_action_toggle_infinite_scroll_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler_toggle_draggable"
        android:title="@string/recycler_test_action_toggle_draggable_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler_toggle_selectable"
        android:title="@string/recycler_test_action_toggle_selectable_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler_toggle_selected"
        android:title="@string/recycler_test_action_toggle_selected_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler_action_select_all"
        android:title="@string/recycler_test_action_select_all_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler_action_clear_all"
        android:title="@string/recycler_test_action_clear_all_selected_text"
        app:showAsAction="never" />
</menu>